--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
-<h2>My Posts<h2>
+<h2>
+    <%= link_to 'Add New', '/posts/:id/edit', class: 'header-menu' %>
+    My Posts
+</h2>
 <ul>
     <% @posts.each do |post| %>
         <li>
