--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h2>
-    <%= link_to 'Add New', '/posts/:id/edit', class: 'header-menu' %>
+    <%= link_to 'Add New', '/posts/new', class: 'header-menu' %>
     My Posts
 </h2>
 <ul>
