--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,20 @@ h2{
     border-bottom: 1px solid #ddd;
 }
 
+ul > li{
+    margin-bottom: 5px;
+}
+
+input[type="text"], textarea{
+    box-sizing: border-box;
+    width: 400px;
+    padding: 5px;
+}
+
+textarea{
+    height: 160px;
+}
+
 .container{
     width: 400px;
     margin: 20px auto;
@@ -42,6 +56,7 @@ h2{
     float: right;
 }
 
-ul > li{
-    margin-bottom: 5px;
+.error{
+    color: red;
+    font-weight: bold;
 }
