--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ 
+ @import "bootstrap";
+ @import "posts";
 
 body{
     font-family: Verdana, sans-serif;
@@ -21,14 +24,11 @@ body{
 
 h2{
     font-size: 16px;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    border-bottom: 1px solid #ddd;
 }
 
-ul > li{
-    margin-bottom: 5px;
-}
+//ul > li{
+//    margin-bottom: 5px;
+//}
 
 input[type="text"], textarea{
     box-sizing: border-box;
@@ -50,17 +50,17 @@ textarea{
     height: 50px;
 }
 
-.header-menu{
-    font-size: 12px;
-    font-weight: normal;
-    float: right;
-}
+//.header-menu{
+//    font-size: 12px;
+//    font-weight: normal;
+//    float: right;
+//}
 
 .error{
     color: red;
     font-weight: bold;
 }
 
-.command{
-    font-size: 12px;
-}
+//.command{
+//    font-size: 12px;
+//}
