--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,11 @@ h2{
     font-size: 16px;
 }
 
+h3{
+    font-size: 14px;
+    padding-top: 25px;
+}
+
 //ul > li{
 //    margin-bottom: 5px;
 //}
