--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
                 <span class="badge badge-primary badge-pill">1</span>
                 -->
                 <% if post.comments.any? %>
-                    <span class="badge badge-primary badge-pill"><%= psot.comments.size %></span>
+                    <span class="badge badge-primary badge-pill"><%= post.comments.size %></span>
                 <% end %>
                 <!-- 記事作成の日時を表示 -->
                 <span class='text-secondary'>
