--- a/app/views/posts/_signin.html.erb
+++ b/app/views/posts/_signin.html.erb
@@ -1,8 +1,7 @@
 <% if session[:user_id] %>
     <div class='d-flex justify-content-end mb-2'>
         <!-- サインイン中のユーザの名前 -->
-        <%= "Name: " %>
-        <%= session[:user_id] %>
+        <%= User.find(session[:user_id]).display_name %>
         <!-- 各種ボタン -->
         <%= link_to t('.signout'), session_path(session[:user_id]), method: :delete, class: 'btn btn-sm btn-primary mr-2' %>
         <%= link_to t('.signup'), new_user_path, class: 'btn btn-sm btn-secondary' %>
